Modification des chemins et ajout image au porfolio

--- a/index.html
+++ b/index.html
@@ -179,15 +179,15 @@
                                     <p class="txt-muted"><i class="bi bi-clock"></i> 2021</p>
                                 </div>
                                 <div class="timeline-body">
-                                    <p>C'est par <a href=".//documents/HTML/index-balise-html.html">ici</a> que j'ai
+                                    <p>C'est par <a href="https://bastardrosset.github.io/html-doc/" target="_blank">ici</a> que j'ai
                                         rédigé mes notes concernant le <span class="upper">html</span></p>
-                                    <p>C'est par <a href=".//documents/CSS/index-proprietes-css.html">ici</a> que j'ai
+                                    <p>C'est par <a href="https://bastardrosset.github.io/CSS-proprietes/">ici</a> que j'ai
                                         rédigé mes notes concernant le <span class="upper">css</span></p>
-                                    <p>C'est par <a href=".//documents/CSS/index-proprietes-css.html">ici</a> que j'ai
+                                    <p>C'est par <a href="https://bastardrosset.github.io/sass/">ici</a> que j'ai
                                         rédigé mes notes concernant le <span class="upper">sass</span></p>
-                                    <p>C'est par <a href=".//documents/CSS/index-proprietes-css.html">ici</a> que j'ai
+                                    <p>C'est par <a href="https://bastardrosset.github.io/GitHub/">ici</a> que j'ai
                                         rédigé mes notes concernant le <span class="upper">GitHub</span></p>
-                                    <p>C'est par <a href="./documents/PHP/index-balises-PHP.html">ici </a>que j'ai
+                                    <p>C'est par <a href="https://bastardrosset.github.io/PHP-proprietes/">ici </a>que j'ai
                                         rédigé mes notes concernant le <span class="upper">php</span></p>
                                 </div>
                             </div>
@@ -308,37 +308,47 @@
                 <div class="container">
                     <div class="row">
                         <div class=" imagePortfolio col-md-4">
-                            <a href="/prj-mon-blog/index.html" target="_blank">
+                            <a href="https://bastardrosset.github.io/PRJ-MON-BLOG/" target="_blank">
                                 <img src="assets/mon_blog.jpg" class="img-thumbnail" alt="image de  la page d'accueil de mon blog">
                             </a>
                         </div>
                         <div class=" imagePortfolio col-md-4">
-                            <a href="/prj-formulaire/redirect.html" target="_blank">
+                            <a href="/https://bastardrosset.github.io/prj-formulaie/" target="_blank">
                                 <img src="assets/forumulaire.jpg" class="img-thumbnail" alt="Page de connection via un formulaire">
                             </a>
                         </div>
                         <div class=" imagePortfolio col-md-4">
-                            <a href="/prj-jeu-du-serpent/index.html" target="_blank">
+                            <a href="https://bastardrosset.github.io/JAVA-SCRIPT-Jeu-en-ligne/" target="_blank">
                                 <img src="/assets/jeu_du_serpent.jpg" class="img-thumbnail" alt="image Game Over du jeu du serpent">
                             </a>
                         </div>
                     </div>
                     <div class="row">
                         <div class=" imagePortfolio col-md-4">
-                            <a href="/prj-top-5/index.html" target="_blank">
+                            <a href="https://bastardrosset.github.io/JQuery-Page-d-accueil/" target="_blank">
                                 <img src="assets/ex_page_d_accueil.jpg" class="img-thumbnail" alt="page d'accueil d'un top 5 des meilleurs actrices">
                             </a>
                         </div>
                         <div class=" imagePortfolio col-md-4">
-                            <a href="/prj-travet-agencly/index.html" target="_blank">
+                            <a href="https://bastardrosset.github.io/HTML-SCSS-Creer-un-site-web/" target="_blank">
                                 <img src="assets/Agence_de_voyage.jpg" class="img-thumbnail" alt="page d'accueil d'une agence de voyage">
                             </a>
                         </div>
                         <div class=" imagePortfolio col-md-4">
-                            <a href="/prj-restaurant/index.html" target="_blank">
+                            <a href="https://bastardrosset.github.io/HTML-CSS-Projet-Restaurant/" target="_blank">
                                 <img src="/assets/restaurant.jpg" class="img-thumbnail" alt="#">
                             </a>
-                        </div> -->
+                        </div> 
+                        <div class=" imagePortfolio col-md-4">
+                            <a href="https://bastardrosset.github.io/P2-BASTARD-ROSSET-Xavier/" target="_blank">
+                                <img src="/assets/Booki.PNG" alt="#">
+                            </a>
+                        </div> 
+                        <div class=" imagePortfolio col-md-4">
+                            <a href="https://bastardrosset.github.io/P3-Bastard-rosset-Xavier/" target="_blank">
+                                <img src="/assets/ohmyfood.PNG" alt="#">
+                            </a>
+                        </div> 
                     </div>
                 </div>
             </div>
