complement du balisage img alt

--- a/index.html
+++ b/index.html
@@ -336,17 +336,17 @@
                         </div>
                         <div class=" imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/HTML-CSS-Projet-Restaurant/" target="_blank">
-                                <img src="/assets/restaurant.jpg" class="img-thumbnail" alt="#">
+                                <img src="/assets/restaurant.jpg" class="img-thumbnail" alt="PAge d'accueil d'un projet fictif d'une enseigne de restaurant">
                             </a>
                         </div> 
                         <div class=" imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/P2-BASTARD-ROSSET-Xavier/" target="_blank">
-                                <img src="/assets/Booki.PNG" alt="#">
+                                <img src="/assets/Booki.PNG" alt="Page d'accueil d'un projet qui propose different hebergements selon la localisation">
                             </a>
                         </div> 
                         <div class=" imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/P3-Bastard-rosset-Xavier/" target="_blank">
-                                <img src="/assets/ohmyfood.PNG" alt="#">
+                                <img src="/assets/ohmyfood.PNG" alt="Page d'accueil d'un projet mobile qui propose differents restaurant selon la localisation">
                             </a>
                         </div> 
                     </div>
