Modification chemain des photos du porfolio

--- a/index.html
+++ b/index.html
@@ -309,44 +309,44 @@
                     <div class="row">
                         <div class=" imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/PRJ-MON-BLOG/" target="_blank">
-                                <img src="assets/mon_blog.jpg" class="img-thumbnail" alt="image de  la page d'accueil de mon blog">
+                                <img src="../assets/mon_blog.jpg" class="img-thumbnail" alt="image de  la page d'accueil de mon blog">
                             </a>
                         </div>
                         <div class=" imagePortfolio col-md-4">
                             <a href="/https://bastardrosset.github.io/prj-formulaie/" target="_blank">
-                                <img src="assets/forumulaire.jpg" class="img-thumbnail" alt="Page de connection via un formulaire">
+                                <img src="../assets/forumulaire.jpg" class="img-thumbnail" alt="Page de connection via un formulaire">
                             </a>
                         </div>
                         <div class=" imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/JAVA-SCRIPT-Jeu-en-ligne/" target="_blank">
-                                <img src="/assets/jeu_du_serpent.jpg" class="img-thumbnail" alt="image Game Over du jeu du serpent">
+                                <img src="../assets/jeu_du_serpent.jpg" class="img-thumbnail" alt="image Game Over du jeu du serpent">
                             </a>
                         </div>
                     </div>
                     <div class="row">
                         <div class=" imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/JQuery-Page-d-accueil/" target="_blank">
-                                <img src="assets/ex_page_d_accueil.jpg" class="img-thumbnail" alt="page d'accueil d'un top 5 des meilleurs actrices">
+                                <img src="../assets/ex_page_d_accueil.jpg" class="img-thumbnail" alt="page d'accueil d'un top 5 des meilleurs actrices">
                             </a>
                         </div>
                         <div class=" imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/HTML-SCSS-Creer-un-site-web/" target="_blank">
-                                <img src="assets/Agence_de_voyage.jpg" class="img-thumbnail" alt="page d'accueil d'une agence de voyage">
+                                <img src="../assets/Agence_de_voyage.jpg" class="img-thumbnail" alt="page d'accueil d'une agence de voyage">
                             </a>
                         </div>
                         <div class=" imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/HTML-CSS-Projet-Restaurant/" target="_blank">
-                                <img src="/assets/restaurant.jpg" class="img-thumbnail" alt="PAge d'accueil d'un projet fictif d'une enseigne de restaurant">
+                                <img src="../assets/restaurant.jpg" class="img-thumbnail" alt="PAge d'accueil d'un projet fictif d'une enseigne de restaurant">
                             </a>
                         </div> 
                         <div class=" imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/P2-BASTARD-ROSSET-Xavier/" target="_blank">
-                                <img src="/assets/Booki.PNG" alt="Page d'accueil d'un projet qui propose different hebergements selon la localisation">
+                                <img src="../assets/Booki.PNG" alt="Page d'accueil d'un projet qui propose different hebergements selon la localisation">
                             </a>
                         </div> 
                         <div class=" imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/P3-Bastard-rosset-Xavier/" target="_blank">
-                                <img src="/assets/ohmyfood.PNG" alt="Page d'accueil d'un projet mobile qui propose differents restaurant selon la localisation">
+                                <img src="../assets/ohmyfood.PNG" alt="Page d'accueil d'un projet mobile qui propose differents restaurant selon la localisation">
                             </a>
                         </div> 
                     </div>
