Ajout du site WebDesign La Panthere au portfolio

--- a/index.html
+++ b/index.html
@@ -349,6 +349,11 @@
                                 <img src="../assets/ohmyfood.PNG" alt="Page d'accueil d'un projet mobile qui propose differents restaurant selon la localisation">
                             </a>
                         </div> 
+                        <div class=" imagePortfolio col-md-4">
+                            <a href="https://bastardrosset.github.io/La_Panthere_P4_Bastard-rosset_Xavier/" target="_blank">
+                                <img src="../assets/WebDesign_La_Panthere.PNG" alt="Page d'accueil d'un projet 100% SEO en boostrap">
+                            </a>
+                        </div> 
                     </div>
                 </div>
             </div>
