Modification Travel Agencly Porfolio

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                             </a>
                         </div>
                         <div class=" imagePortfolio col-md-4">
-                            <a href="https://bastardrosset.github.io/HTML-SCSS-Creer-un-site-web/" target="_blank">
+                            <a href="https://bastardrosset.github.io/Travel-Agencly/" target="_blank">
                                 <img src="../assets/Agence_de_voyage.jpg" class="img-thumbnail" alt="page d'accueil d'une agence de voyage">
                             </a>
                         </div>
