--- a/index.html
+++ b/index.html
@@ -336,51 +336,49 @@
             <div id="gradient-4">
                 <div class="container">
                     <div class="row">
-                        <div class=" imagePortfolio col-md-4">
+                        <div class="imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/PRJ-MON-BLOG/" target="_blank">
                                 <img src="./assets/mon_blog.jpg" class="img-thumbnail" alt="image de  la page d'accueil de mon blog">
                             </a>
                         </div>
-                        <div class=" imagePortfolio col-md-4">
+                        <div class="imagePortfolio col-md-4">
                             <a href="/https://bastardrosset.github.io/prj-formulaie/" target="_blank">
                                 <img src="./assets/forumulaire.jpg" class="img-thumbnail" alt="Page de connection via un formulaire">
                             </a>
                         </div>
-                        <div class=" imagePortfolio col-md-4">
+                        <div class="imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/JAVA-SCRIPT-Jeu-en-ligne/" target="_blank">
                                 <img src="./assets/jeu_du_serpent.jpg" class="img-thumbnail" alt="image Game Over du jeu du serpent">
                             </a>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class=" imagePortfolio col-md-4">
+                        <div class="imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/JQuery-Page-d-accueil/" target="_blank">
                                 <img src="./assets/ex_page_d_accueil.jpg" class="img-thumbnail" alt="page d'accueil d'un top 5 des meilleurs actrices">
                             </a>
                         </div>
-                        <div class=" imagePortfolio col-md-4">
+                        <div class="imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/Travel-Agencly/" target="_blank">
                                 <img src="./assets/Agence_de_voyage.jpg" class="img-thumbnail" alt="page d'accueil d'une agence de voyage">
                             </a>
                         </div>
-                        <div class=" imagePortfolio col-md-4">
+                        <div class="imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/HTML-CSS-Projet-Restaurant/" target="_blank">
-                                <img src="./assets/restaurant.jpg" class="img-thumbnail" alt="PAge d'accueil d'un projet fictif d'une enseigne de restaurant">
+                                <img src="./assets/restaurant.jpg" class="img-thumbnail" alt="Page d'accueil d'un projet fictif d'une enseigne de restaurant">
                             </a>
                         </div> 
-                        <div class=" imagePortfolio col-md-4">
+                        <div class="imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/P2-BASTARD-ROSSET-Xavier/" target="_blank">
-                                <img src="./assets/Booki.PNG" alt="Page d'accueil d'un projet qui propose different hebergements selon la localisation">
+                                <img src="./assets/Booki.PNG" class="img-thumbnail" alt="Page d'accueil d'un projet qui propose different hebergements selon la localisation">
                             </a>
                         </div> 
-                        <div class=" imagePortfolio col-md-4">
+                        <div class="imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/P3-Bastard-rosset-Xavier/" target="_blank">
-                                <img src="./assets/ohmyfood.PNG" alt="Page d'accueil d'un projet mobile qui propose differents restaurant selon la localisation">
+                                <img src="./assets/ohmyfood.PNG" class="img-thumbnail" alt="Page d'accueil d'un projet mobile qui propose differents restaurant selon la localisation">
                             </a>
                         </div> 
-                        <div class=" imagePortfolio col-md-4">
+                        <div class="imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/La_Panthere_P4_Bastard-rosset_Xavier/" target="_blank">
-                                <img src="./assets/WebDesign_La_Panthere.PNG" alt="Page d'accueil d'un projet 100% SEO en boostrap">
+                                <img src="./assets/WebDesign_La_Panthere.PNG" class="img-thumbnail" alt="Page d'accueil d'un projet 100% SEO en boostrap">
                             </a>
                         </div> 
                     </div>
