--- a/index.html
+++ b/index.html
@@ -214,20 +214,10 @@
                         <button type="button" data-bs-target="#carouselEducation" data-bs-slide-to="6" aria-label="Slide 7"></button>
                         <button type="button" data-bs-target="#carouselEducation" data-bs-slide-to="7" aria-label="Slide 8"></button>
                         <button type="button" data-bs-target="#carouselEducation" data-bs-slide-to="8" aria-label="Slide 9"></button>
+                        <button type="button" data-bs-target="#carouselEducation" data-bs-slide-to="9" aria-label="Slide 10"></button>
                     </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="./assets/Diplome.jpg" class="d-block w-100" alt="Mon diplome">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>1996</h5>
-                                    <span class="bi-award-fill"></span>
-                                    <h3><span class="upper">adea</span> - Bourg-en-Bresse</h3>
-                                    <div class="line-education"></div>
-                                    <h4> Certificat d'aptitude Professionnelle Agricole</h4>
-                                    <p>jardins et espaces verts </p>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
                                 <img src="./assets/HTML_&_CSS.png" class="d-block w-100" alt="Mon diplôme HTML & CSS">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>2021</h5>
@@ -273,17 +263,6 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="./assets/PHP_&_mySQL.png" class="d-block w-100" alt="Mon diplôme concevez un site web avec PHP">
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>2021</h5>
-                                    <span class="bi-award-fill"></span>
-                                    <h3>OpenClassRooms</h3>
-                                    <div class="line-education"></div>
-                                    <h4> Certificat de réussite</h4>
-                                    <p>Concevez votre site web avec <span class="upper">php</span> et my<span class="upper">sql</span></p>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
                                 <img src="./assets/SEO.png" class="d-block w-100" alt="Mon diplôme Augmentez votre trafic avec le référencement naturel">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>2021</h5>
@@ -295,24 +274,58 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="..." class="d-block w-100" alt="...">
+                                <img src="./assets/PHP_&_mySQL.png" class="d-block w-100" alt="Mon diplôme concevez un site web avec PHP">
                                 <div class="carousel-caption d-none d-md-block">
-                                  <h5>Third slide label</h5>
-                                  <p>Some representative placeholder content for the third slide.</p>
+                                    <h5>2021</h5>
+                                    <span class="bi-award-fill"></span>
+                                    <h3>OpenClassRooms</h3>
+                                    <div class="line-education"></div>
+                                    <h4> Certificat de réussite</h4>
+                                    <p>Concevez votre site web avec <span class="upper">php</span> et my<span class="upper">sql</span></p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="..." class="d-block w-100" alt="...">
+                                <img src="./assets/Optimisez_le_referencement_SEO_en_ameliorant_ses_performances_techniques.PNG" class="d-block w-100" alt="Mon diplôme Optimisez le referencement SEO en ameliorant ses performances techniques">
                                 <div class="carousel-caption d-none d-md-block">
-                                  <h5>Third slide label</h5>
-                                  <p>Some representative placeholder content for the third slide.</p>
+                                    <h5>2022</h5>
+                                    <span class="bi-award-fill"></span>
+                                    <h3>OpenClassRooms</h3>
+                                    <div class="line-education"></div>
+                                    <h4> Certificat de réussite</h4>
+                                    <p>Optimisez le referencement <span class="upper">seo</span> en ameliorant ses performances techniques</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="..." class="d-block w-100" alt="...">
+                                <img src="./assets/Concevez_un_contenu_web_accessible.PNG" class="d-block w-100" alt="Mon diplôme Concevez un contenu web accessible">
                                 <div class="carousel-caption d-none d-md-block">
-                                  <h5>Third slide label</h5>
-                                  <p>Some representative placeholder content for the third slide.</p>
+                                  <h5>2022</h5>
+                                  <span class="bi-award-fill"></span>
+                                  <h3>OpenClassRooms</h3>
+                                  <div class="line-education"></div>
+                                    <h4> Certificat de réussite</h4>
+                                  <p>Concevez un contenu web accessible</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./assets/Maitrisez_les_fondamentaux_d_excel.PNG" class="d-block w-100" alt="Mon diplôme Maitrisez les fondamentaux d'Excel">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>2022</h5>
+                                    <span class="bi-award-fill"></span>
+                                    <h3>OpenClassRooms</h3>
+                                    <div class="line-education"></div>
+                                      <h4> Certificat de réussite</h4>
+                                    <p>Maitrisez les fondamentaux d'Excel</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./assets/Creez_des_sites_web_responsives_avec_Bootstrap5.PNG" class="d-block w-100" alt="Mon diplôme Creez des sites web responsives avec Bootstrap 5">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>2022</h5>
+                                    <span class="bi-award-fill"></span>
+                                    <h3>OpenClassRooms</h3>
+                                    <div class="line-education"></div>
+                                      <h4> Certificat de réussite</h4>
+                                    <p>Creez des sites web responsives avec Bootstrap 5</p>
                             </div>
                         </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselEducation" data-bs-slide="prev">
