--- a/index.html
+++ b/index.html
@@ -61,35 +61,40 @@
                 <div class="row">
                     <div class="container col-lg-6">
                         <div class="progress h-25">
-                            <div class="progress-bar        progress-bar-striped progress-bar-animated bg-info-dark fst-italic" role="progressbar" style="width:90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info-dark fst-italic" role="progressbar" style="width:90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                                 <h5><span class="upper">html</span>> 90%</h5>
                             </div>
                         </div>
                         <div class="progress h-25">
-                            <div class="progress-bar        progress-bar-striped progress-bar-animated bg-info-dark fst-italic" role="progressbar" style="width:90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info-dark fst-italic" role="progressbar" style="width:90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                                 <h5><span class="upper">css</span> 90%</h5>
                             </div>
                         </div>
                         <div class="progress h-25">
-                            <div class="progress-bar        progress-bar-striped progress-bar-animated  bg-info-dark fst-italic" role="progressbar" style="width:80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated  bg-info-dark fst-italic" role="progressbar" style="width:80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                                 <h5><span class="upper">scss</span> 80%</h5>
+                            </div>
+                        </div>
+                        <div class="progress h-25">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated  bg-info-dark fst-italic" role="progressbar" style="width:60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                                <h5><span class="upper">bootstrap</span> 60%</h5>
                             </div>
                         </div>
                     </div>
                     <div class="container col-lg-6">
                         <div class="progress h-25">
-                            <div class="progress-bar        progress-bar-striped progress-bar-animated bg-info-dark fst-italic" role="progressbar" style="width:80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info-dark fst-italic" role="progressbar" style="width:50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                                 <h5><span class="upper">php</span>
-                                    80%</h5>
+                                    50%</h5>
                             </div>
                         </div>
                         <div class="progress h-25">
-                            <div class="progress-bar        progress-bar-striped progress-bar-animated bg-info-dark fst-italic" role="progressbar" style="width:50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info-dark fst-italic" role="progressbar" style="width:50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                                 <h5>my<span class="upper">sql</span> 50%</h5>
                             </div>
                         </div>
                         <div class="progress h-25">
-                            <div class="progress-bar        progress-bar-striped progress-bar-animated bg-info-dark fst-italic" role="progressbar" style="width:50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info-dark fst-italic" role="progressbar" style="width:50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                                 <h5><span class="upper">java script</span> 50%</h5>
                             </div>
                         </div>
@@ -118,9 +123,7 @@
                                     <p class="txt-muted"><i class="bi bi-clock"></i> 2021-2022</p>
                                 </div>
                                 <div class="timeline-body">
-                                    <p>Ce projet m'a permis de découvrir le framework Bootstrap!</p>
-                                    <p></p>
-                                    <p></p>
+                                    <p>Ce projet m'a permis de m'auto évaluer sur les compétences que j'ai acquis durant cette première année d'apprentissage et de mettre en pratique ces connaissances.</p>
                                 </div>
                             </div>
                         </div>
@@ -132,14 +135,12 @@
                         <div class="timeline-panel-container-inverted">
                             <div class="timeline-panel">
                                 <div class="timeline-header">
-                                    <h3>Jeu du serpent</h3>
+                                    <h3>OpenClassRooms</h3>
                                     <h4>Developpeur web junior</h4>
                                     <p class="txt-muted"><i class="bi bi-clock"></i> 2021-2022</p>
                                 </div>
                                 <div class="timeline-body">
-                                    <p>Developpement du jeu du serpent en Java Script</p>
-                                    <p></p>
-                                    <p></p>
+                                    <p>L'opportunité de rejoindre le cursus formation developpeur web d'Open Class Rooms se présente à moi. Le début d'une grande aventure me permet la rencontre d'une communauté de professionnels qui partage et initient aux méthodes de travail et un accés à énorement de bibiothèque. Les projets s'enchaînent.</p>
                                 </div>
                             </div>
                         </div>
@@ -156,11 +157,7 @@
                                     <p class="txt-muted"><i class="bi bi-clock"></i> 2021</p>
                                 </div>
                                 <div class="timeline-body">
-                                    <p>Ma page!</p>
-                                    <p>Ce projet m'a permis de d'organiser la structure d'un site</p>
-                                    <p>Cela m'a également fait mettre en pratique du <span class="upper">html</span> et
-                                        <span class="upper">scss</span>
-                                    </p>
+                                    <p>L'envie de progresser et l'investissement personnel important m'amène à suivre des formations sur Udemy qui m'ont permis de comprendre comment intègrer un projet, à pratiquer en développant plusieurs petits projets et aussi d'élargir ma bibiothèque de connaissances en apprenant de nouveau frameWork tel que Bootstrap.</p>
                                 </div>
                             </div>
                         </div>
@@ -172,21 +169,12 @@
                         <div class="timeline-panel-container-inverted">
                             <div class="timeline-panel">
                                 <div class="timeline-header">
-                                    <h3>Mes Cours <span class="upper">html</span> et <span class="upper">css</span></h3>
+                                    <h3>Les bases du développement Web</h3>
                                     <h4>Developpeur web junior</h4>
                                     <p class="txt-muted"><i class="bi bi-clock"></i> 2021</p>
                                 </div>
                                 <div class="timeline-body">
-                                    <p>C'est par <a href="https://bastardrosset.github.io/html-doc/" target="_blank">ici</a> que j'ai
-                                        rédigé mes notes concernant le <span class="upper">html</span></p>
-                                    <p>C'est par <a href="https://bastardrosset.github.io/CSS-proprietes/">ici</a> que j'ai
-                                        rédigé mes notes concernant le <span class="upper">css</span></p>
-                                    <p>C'est par <a href="https://bastardrosset.github.io/sass/">ici</a> que j'ai
-                                        rédigé mes notes concernant le <span class="upper">sass</span></p>
-                                    <p>C'est par <a href="https://bastardrosset.github.io/GitHub/">ici</a> que j'ai
-                                        rédigé mes notes concernant le <span class="upper">GitHub</span></p>
-                                    <p>C'est par <a href="https://bastardrosset.github.io/PHP-proprietes/">ici </a>que j'ai
-                                        rédigé mes notes concernant le <span class="upper">php</span></p>
+                                    <p>J'entreprend de me former en autodidacte au HTML, CSS et SCSS pour aquérir les bases du developpement web. Toutes les ressources recommandés par le moteur de recherche Google m'ont été utile dans cette étape. Mettre en pratique en développant plusieurs petits projets m'a permis de progresser.</p>
                                 </div>
                             </div>
                         </div>
@@ -203,7 +191,7 @@
                 <h2>Education</h2>
             </div>
             <div id="gradient3">
-                <div id="carouselEducation" class="carousel carouselEducation slide" data-bs-ride="carousel">
+                <div id="carouselEducation" class="carousel   carouselEducation slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselEducation" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                         <button type="button" data-bs-target="#carouselEducation" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -326,6 +314,7 @@
                                     <div class="line-education"></div>
                                       <h4> Certificat de réussite</h4>
                                     <p>Creez des sites web responsives avec Bootstrap 5</p>
+                                </div>
                             </div>
                         </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselEducation" data-bs-slide="prev">
@@ -353,46 +342,44 @@
                             <a href="https://bastardrosset.github.io/PRJ-MON-BLOG/" target="_blank">
                                 <img src="./assets/mon_blog.jpg" class="img-thumbnail" alt="image de  la page d'accueil de mon blog">
                             </a>
-                        </div>
-                        <div class="imagePortfolio col-md-4">
-                            <a href="/https://bastardrosset.github.io/prj-formulaie/" target="_blank">
-                                <img src="./assets/forumulaire.jpg" class="img-thumbnail" alt="Page de connection via un formulaire">
-                            </a>
-                        </div>
-                        <div class="imagePortfolio col-md-4">
-                            <a href="https://bastardrosset.github.io/JAVA-SCRIPT-Jeu-en-ligne/" target="_blank">
-                                <img src="./assets/jeu_du_serpent.jpg" class="img-thumbnail" alt="image Game Over du jeu du serpent">
-                            </a>
+                            <p>Projet Mon blog, developpé en HTML & CSS, projet de developpement de mes hobbies.</p>
+
                         </div>
                         <div class="imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/JQuery-Page-d-accueil/" target="_blank">
                                 <img src="./assets/ex_page_d_accueil.jpg" class="img-thumbnail" alt="page d'accueil d'un top 5 des meilleurs actrices">
                             </a>
+                            <p>Projet Top Star,developpé en Java Script & Jquery, projet de developpement.</p>
                         </div>
                         <div class="imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/Travel-Agencly/" target="_blank">
                                 <img src="./assets/Agence_de_voyage.jpg" class="img-thumbnail" alt="page d'accueil d'une agence de voyage">
                             </a>
+                            <p>Projet Travel Agencly, developpé avec Boostraop & SCSS, projet de developpement d'une agence de voyage.</p>
                         </div>
                         <div class="imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/HTML-CSS-Projet-Restaurant/" target="_blank">
                                 <img src="./assets/restaurant.jpg" class="img-thumbnail" alt="Page d'accueil d'un projet fictif d'une enseigne de restaurant">
                             </a>
+                            <p>Projet Le bistrot étoilé, developpé en HTML & CSS, projet d'intégration de l'enseigne d'un restaurant.</p>
                         </div> 
                         <div class="imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/P2-BASTARD-ROSSET-Xavier/" target="_blank">
                                 <img src="./assets/Booki.PNG" class="img-thumbnail" alt="Page d'accueil d'un projet qui propose different hebergements selon la localisation">
                             </a>
+                            <p>Projet Booki, developpé en HTML & CSS, projet d'intégration d'une maquette.</p>
                         </div> 
                         <div class="imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/P3-Bastard-rosset-Xavier/" target="_blank">
                                 <img src="./assets/ohmyfood.PNG" class="img-thumbnail" alt="Page d'accueil d'un projet mobile qui propose differents restaurant selon la localisation">
                             </a>
+                            <p>Projet OhMyFood, developpé en HTML & SCSS, application du webDesign, projet d'intégration d'une maquette.</p>
                         </div> 
                         <div class="imagePortfolio col-md-4">
                             <a href="https://bastardrosset.github.io/La_Panthere_P4_Bastard-rosset_Xavier/" target="_blank">
                                 <img src="./assets/WebDesign_La_Panthere.PNG" class="img-thumbnail" alt="Page d'accueil d'un projet 100% SEO en boostrap">
                             </a>
+                            <p>Projet SEO, travaille sur le référencement et l'accessibilité, projet d'optimisation d'un site web.</p>
                         </div> 
                     </div>
                 </div>
@@ -406,7 +393,7 @@
                 <h2 class="Recommandations"><u>Recommandations</u></h2>
             </div>
         </div>
-        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div id="carouselExampleDark" class="carousel carousel-dark slide slideNumber_2" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -436,8 +423,7 @@
             </button>
         </div>
     </section>
-    <section id="contact" style="
-    background-color: #292e49b6;">
+    <section id="contact">
         <div class="container">
             <div class="divider"></div>
             <div class="heading">
@@ -445,32 +431,32 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 col-lg-offset-1">
-                    <form id="contact-form" method="post" action="/PHP/contact.php">
+                    <form id="contact-form" method="get" action="#">
                         <div class="row">
                             <div class="col-md-6">
                                 <label for="firstname">Prénom<span class="red"> *</span></label>
-                                <input type="text" id="firstname" name="firstname" class="form-control" placeholder="Votre prenom" value="">
+                                <input type="text" id="firstname" name="firstname" class="form-control" placeholder="Votre prenom">
                                 <p class="comment"></p>
                             </div>
                             <div class="col-md-6">
                                 <label for="name">nom<span class="red"> *</span></label>
-                                <input type="text" id="name" name="name" class="form-control" placeholder="Votre nom" value="">
+                                <input type="text" id="name" name="name" class="form-control" placeholder="Votre nom">
                                 <p class="comment"></p>
                             </div>
                             <div class="col-md-6">
                                 <label for="email">Email<span class="red"> *</span></label>
-                                <input type="text" id="email" name="email" class="form-control" placeholder="Votre Email" value="">
-                                <p class=" comment"></p>
+                                <input type="text" id="email" name="email" class="form-control" placeholder="Votre Email">
+                                <p class="comment"></p>
                             </div>
                             <div class="col-md-6">
                                 <label for="phone">Téléphone</label>
-                                <input type="text" id="phone" name="phone" class="form-control" placeholder="Votre téléphone" value="">
-                                <p class=" comment"></p>
+                                <input type="text" id="phone" name="phone" class="form-control" placeholder="Votre téléphone">
+                                <p class="comment"></p>
                             </div>
                             <div class="col-md-12">
                                 <label for="message">Message<span class="red"> *</span></label>
-                                <textarea id="message" class="form-control" placeholder="Votre message" rows="4"></textarea>
-                                <p class=" comment"></p>
+                                <textarea id="message" class="form-control" placeholder="Votre message" rows="4" ></textarea>
+                                <p class="comment"></p>
                             </div>
                             <div class="col-md-12">
                                 <p class="blue"><span class="red">*</span> Ces informations sont requises!</p>
@@ -488,7 +474,7 @@
         <a href="#anchorHeader"><i class="fas fa-chevron-up"></i></a>
         <h5><i class="far fa-copyright"></i> - 2022 - Mon CV en ligne</h5>
     </footer>
-
+    <script src="./JS/script.js"></script>
 </body>
 
 </html>
