Modification index.html correction de fautes && style.css correction responsive progressBar

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Bastard-rosset Xavier, CV en ligne</title>
+    <meta name="description" content="Mon CV de Developpeur Web en ligne ">
     <link rel="shortcut icon" href="./assets/profil.jpg">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -58,8 +59,8 @@
         </div>
         <div id="gradient">
             <div class="container">
-                <div class="row">
-                    <div class="container col-lg-6">
+                <div class="row progressColumn">
+                    <div class="container col-lg-6 firstRow">
                         <div class="progress h-25">
                             <div class="progress-bar progress-bar-striped progress-bar-animated bg-info-dark fst-italic" role="progressbar" style="width:90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                                 <h5><span class="upper">html</span>> 90%</h5>
@@ -81,7 +82,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="container col-lg-6">
+                    <div class="container col-lg-6 secondRow">
                         <div class="progress h-25">
                             <div class="progress-bar progress-bar-striped progress-bar-animated bg-info-dark fst-italic" role="progressbar" style="width:50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                                 <h5><span class="upper">php</span>
@@ -157,7 +158,7 @@
                                     <p class="txt-muted"><i class="bi bi-clock"></i> 2021</p>
                                 </div>
                                 <div class="timeline-body">
-                                    <p>L'envie de progresser et l'investissement personnel important m'amène à suivre des formations sur Udemy qui m'ont permis de comprendre comment intègrer un projet, à pratiquer en développant plusieurs petits projets et aussi d'élargir ma bibiothèque de connaissances en apprenant de nouveau frameWork tel que Bootstrap.</p>
+                                    <p>L'envie de progresser et l'investissement personnel important m'amène à suivre des formations sur Udemy qui m'ont permis de comprendre comment intègrer un projet, à pratiquer en développant et aussi d'élargir ma bibiothèque de connaissances en apprenant de nouveaux FrameWork tel que Bootstrap.</p>
                                 </div>
                             </div>
                         </div>
@@ -174,7 +175,7 @@
                                     <p class="txt-muted"><i class="bi bi-clock"></i> 2021</p>
                                 </div>
                                 <div class="timeline-body">
-                                    <p>J'entreprend de me former en autodidacte au HTML, CSS et SCSS pour aquérir les bases du developpement web. Toutes les ressources recommandés par le moteur de recherche Google m'ont été utile dans cette étape. Mettre en pratique en développant plusieurs petits projets m'a permis de progresser.</p>
+                                    <p>J'entreprends à me former en autodidacte au HTML, CSS et SCSS pour aquérir les bases du developpement web. Toutes les ressources recommandées par le moteur de recherche Google m'ont été utile dans cette étape. Mettre en pratique en développant plusieurs petits projets m'a permis de progresser.</p>
                                 </div>
                             </div>
                         </div>
@@ -188,7 +189,7 @@
         <div class="container-fluid-xl">
             <div id="line-3"></div>
             <div class="heading">
-                <h2>Education</h2>
+                <h2>Éducation</h2>
             </div>
             <div id="gradient3">
                 <div id="carouselEducation" class="carousel   carouselEducation slide" data-bs-ride="carousel">
@@ -459,7 +460,7 @@
                                 <p class="comment"></p>
                             </div>
                             <div class="col-md-12">
-                                <p class="blue"><span class="red">*</span> Ces informations sont requises!</p>
+                                <p class="blue"><span class="red">*</span> Ces informations sont requises !</p>
                             </div>
                             <div class="col-md-12">
                                 <input type="submit" class="button1" value="Envoyer">
