--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <link rel="shortcut icon" href="./assets/profil.jpg">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=DM+Serif+Display&family=Libre+Baskerville&family=Limelight&family=Lobster&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    
 </head>
 <body data-bs-spy="scroll" data-bs-target="#navbar">
     <section id="anchorHeader">
@@ -19,10 +18,10 @@
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <div class="navbar-nav">
                         <a class="nav-link active" aria-current="page" href="#">Moi</a>
                         <a class="nav-link" href="#skills">Compétences</a>
@@ -472,8 +471,34 @@
         </div>
     </section>
     <footer>
-        <a href="#anchorHeader"><i class="fas fa-chevron-up"></i></a>
+        <div class="footerAnchor">
+            <a href="#anchorHeader"><i class="fas fa-chevron-up"></i></a>
         <h5><i class="far fa-copyright"></i> - 2022 - Mon CV en ligne</h5>
+        </div>
+        <div class="socialLinks">
+            <ul>
+                <li>
+                    <a href="https://www.facebook.com/Pioupiouxav" target="_blank">
+                        <i class="fab fa-facebook" style="--btn : #3b5998"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/xav-b-06b635218/" target="_blank">
+                        <i class="fab fa-linkedin" style="--btn : #0077b5 "></i>
+                    </a>    
+                </li>
+                <li>
+                    <a href="https://github.com/Bastardrosset" target="_blank">
+                        <i class="fab fa-github" style="--btn : #171515"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/0_rosset" target="_blank">
+                        <i class="fab fa-twitter" style="--btn: #1da1f2"></i>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </footer>
     <script src="./JS/script.js"></script>
 </body>
