Ajout du site BRX-Shop au porfolio

--- a/index.html
+++ b/index.html
@@ -381,6 +381,12 @@
                             </a>
                             <p>Projet SEO, travaille sur le référencement et l'accessibilité, projet d'optimisation d'un site web.</p>
                         </div> 
+                        <div class="imagePortfolio col-md-4">
+                            <a href="#" target="_blank">
+                                <img src="./assets/BRX_Shop.PNG" class="img-thumbnail" alt="Page d'accueil de mon site e-commerce en React-bootstrap">
+                            </a>
+                            <p>Projet site e-commerce, réalisé avec React-Bootstrap, site en construction</p>
+                        </div> 
                     </div>
                 </div>
             </div>
