Modification script.js construction des fonctions valid input form

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
     </section>
     <section id="recommandations">
         <div class="container-fluid-xl">
-            <div id="line"></div>
+            <div id="line-5"></div>
             <div class="heading">
                 <h2 class="Recommandations"><u>Recommandations</u></h2>
             </div>
@@ -442,27 +442,27 @@
                             <div class="col-md-6">
                                 <label for="firstname">Prénom<span class="red"> *</span></label>
                                 <input type="text" id="firstname" name="firstname" class="form-control" placeholder="Votre prenom">
-                                <p class="comment"></p>
+                                <small></small>
                             </div>
                             <div class="col-md-6">
                                 <label for="name">nom<span class="red"> *</span></label>
                                 <input type="text" id="name" name="name" class="form-control" placeholder="Votre nom">
-                                <p class="comment"></p>
+                                <small></small>
                             </div>
                             <div class="col-md-6">
                                 <label for="email">Email<span class="red"> *</span></label>
                                 <input type="text" id="email" name="email" class="form-control" placeholder="Votre Email">
-                                <p class="comment"></p>
+                                <small></small>
                             </div>
                             <div class="col-md-6">
                                 <label for="phone">Téléphone</label>
                                 <input type="text" id="phone" name="phone" class="form-control" placeholder="Votre téléphone">
-                                <p class="comment"></p>
+                                <small></small>
                             </div>
                             <div class="col-md-12">
                                 <label for="message">Message<span class="red"> *</span></label>
-                                <textarea id="message" class="form-control" placeholder="Votre message" rows="4" ></textarea>
-                                <p class="comment"></p>
+                                <textarea id="message" class="form-control" placeholder="Votre message"></textarea>
+                                <small></small>
                             </div>
                             <div class="col-md-12">
                                 <p class="blue"><span class="red">*</span> Ces informations sont requises !</p>
