Modif de cv à télécharger & ajout des diplomes react à caroussel

--- a/index.html
+++ b/index.html
@@ -95,7 +95,12 @@
                         </div>
                         <div class="progress h-25">
                             <div class="progress-bar progress-bar-striped progress-bar-animated bg-info-dark fst-italic" role="progressbar" style="width:50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                                <h5><span class="upper">java script</span> 50%</h5>
+                                <h5><span class="upper">java script</span> 60%</h5>
+                            </div>
+                        </div>
+                        <div class="progress h-25">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info-dark fst-italic" role="progressbar" style="width:50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                                <h5><span class="upper">ReactJs</span> 60%</h5>
                             </div>
                         </div>
                     </div>
@@ -203,6 +208,8 @@
                         <button type="button" data-bs-target="#carouselEducation" data-bs-slide-to="7" aria-label="Slide 8"></button>
                         <button type="button" data-bs-target="#carouselEducation" data-bs-slide-to="8" aria-label="Slide 9"></button>
                         <button type="button" data-bs-target="#carouselEducation" data-bs-slide-to="9" aria-label="Slide 10"></button>
+                        <button type="button" data-bs-target="#carouselEducation" data-bs-slide-to="10" aria-label="Slide 11"></button>
+                        <button type="button" data-bs-target="#carouselEducation" data-bs-slide-to="11" aria-label="Slide 12"></button>
                     </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -314,6 +321,28 @@
                                     <div class="line-education"></div>
                                       <h4> Certificat de réussite</h4>
                                     <p>Creez des sites web responsives avec Bootstrap 5</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./assets/Appli_react.png" class="d-block w-100" alt="Mon diplôme Creez une application React complète">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>2022</h5>
+                                    <span class="bi-award-fill"></span>
+                                    <h3>OpenClassRooms</h3>
+                                    <div class="line-education"></div>
+                                      <h4> Certificat de réussite</h4>
+                                    <p>Créez une application React complète</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./assets/nodeJs_Express_MongoDB.png" class="d-block w-100" alt="Mon diplôme Passez au Full Stack avec Node.js, Express et MongoDB">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>2022</h5>
+                                    <span class="bi-award-fill"></span>
+                                    <h3>OpenClassRooms</h3>
+                                    <div class="line-education"></div>
+                                      <h4> Certificat de réussite</h4>
+                                    <p>Passez au Full Stack avec Node.js, Express et MongoDB</p>
                                 </div>
                             </div>
                         </div>
