MAJ CV & changement lien discord

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="row-xl heading">
                 <h1>Hello, moi c'est Xavier</h1>
-                <h3>Developpeur web</h3>
+                <h3>Developpeur web full-stack</h3>
             </div>
         </div>
         <div class="row-sm-12 CV">
@@ -94,12 +94,12 @@
                             </div>
                         </div>
                         <div class="progress h-25">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info-dark fst-italic" role="progressbar" style="width:50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info-dark fst-italic" role="progressbar" style="width:60%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                                 <h5><span class="upper">java script</span> 60%</h5>
                             </div>
                         </div>
                         <div class="progress h-25">
-                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info-dark fst-italic" role="progressbar" style="width:50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated bg-info-dark fst-italic" role="progressbar" style="width:60%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                                 <h5><span class="upper">ReactJs</span> 60%</h5>
                             </div>
                         </div>
@@ -518,7 +518,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/xav-b-06b635218/" target="_blank">
+                    <a href="https://www.linkedin.com/in/xavier-b-06b635218/" target="_blank">
                         <i class="fab fa-linkedin" style="--btn : #0077b5 "></i>
                     </a>    
                 </li>
@@ -529,7 +529,7 @@
                 </li>
                 <li>
                     <a href="https://twitter.com/0_rosset" target="_blank">
-                        <i class="fab fa-twitter" style="--btn: #1da1f2"></i>
+                        <i class="fab fa-discord" style="--btn: #1da1f2"></i>
                     </a>
                 </li>
             </ul>
