Footer ajout de lien youtube et supprimé twitter

--- a/index.html
+++ b/index.html
@@ -528,8 +528,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/0_rosset" target="_blank">
-                        <i class="fab fa-discord" style="--btn: #1da1f2"></i>
+                    <a href="https://www.youtube.com/channel/UC_P8JkktoVgsN9QxTJmLLfQ" target="_blank">
+                        <i class="fab fa-youtube" style="--btn: #FF3D00"></i>
                     </a>
                 </li>
             </ul>
